--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 .card h3 {
-  font-size: 1.1vmax;
+  font-size: 2.4vmin;
   padding: 0;
   padding-left: 0.1vmin;
   margin-bottom: 0;
@@ -88,10 +88,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 2.5vh;
-  width: 2.5vw;
+  height: 4.5vh;
+  width: 4.5vw;
   position: relative;
-  font-size: 1vmax;
+  font-size: 2.3vmin;
 }
 
 .town-div {
@@ -123,14 +123,17 @@
   background-color: black;
 }
 
+
+
+
 #removeText {
   color: rgb(255, 255, 255);
   background-color: black;
 }
 
 .bg-image {
-  height: auto;
-  width: 100%;
+  height: 100%;
+  width: auto;
 }
 
 #TownRemove {
@@ -149,9 +152,32 @@
   background-color: crimson;
 }
 
-.heal-button {
-  margin: 2vmax;
+.clickable-town-div:hover {
+  cursor: pointer;
+  box-shadow: 0 0 35px rgba(33,33,33); 
 }
+
+.heal-div {
+  margin: 2vmax;
+  height: 30vh;
+  width: 40vw;
+  background: linear-gradient(90deg, rgb(216, 216, 216),rgb(249, 160, 160), rgb(218, 95, 95), rgb(227, 156, 156), rgb(216, 216, 216));
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: center;
+  cursor: not-allowed;
+  position: relative;
+}
+
+.heal-div.playable:hover {
+  box-shadow: 0 0 80px rgb(239, 0, 0);
+  cursor: pointer;
+  color: green;
+}
+
+
 
 .healer-div {
   display: flex;
@@ -165,7 +191,7 @@
 #playerMonster {
   display: flex;
   flex-direction: column;
-  
+  justify-content: space-between;
 }
 
 #stats h4 {
@@ -232,10 +258,7 @@
   justify-content: space-between;
 }
 
-.clickable-town-div:hover {
-  cursor: pointer;
-  box-shadow: 0 0 35px rgba(33,33,33); 
-}
+
 
 .clickable-monster:hover {
   cursor: pointer;
@@ -350,7 +373,7 @@
 .avatar {
   width: 10vmax;
   height: 10vmax;
-  flex-shrink: 0;
+  flex-shrink: 1;
 
 }
 
@@ -500,13 +523,14 @@
 
 
 
-.playable {
-  
+/*
+.playable { 
   box-shadow: 0 0 2px rgba(33,33,33); 
   justify-content: center;
 }
+*/
 
-.playable:hover {
+.card.playable:hover {
   cursor: pointer;
   box-shadow: 0 0 10px rgb(178, 95, 0); 
   background: linear-gradient(90deg, rgb(64, 59, 52),rgb(108, 80, 43), rgb(88, 68, 43), rgb(87, 47, 8));
@@ -519,7 +543,7 @@
 
 #handContainer2 {
   width: 30vw;
-  height: 57vh;
+  height: 55vh;
   background-color: #0500332a;
   display: flex;
   flex-direction: row;
@@ -544,7 +568,7 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
   margin-block-end: 0.01em;
   margin-left: 0.1em;
   padding: 0.2vmax;
-  font-size: 1.2vmax;
+  font-size: 1.2vmin;
 }
 
 
@@ -553,11 +577,11 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 }
 
 .card-pile-card p {
-  font-size: 1.6vmax;
+  font-size: 1.6vmin;
 }
 
 .card p{
-  font-size: 0.95vmax;
+  font-size: 1.8vmin;
   padding: 0;
   justify-content: center;
 }
@@ -617,7 +641,12 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
  .card-reward {
   margin-left: 2vw;
   width: 16vw;
-  height: 12vh;
+  height: 14vh;
+}
+
+#shop-div .card-reward {
+  width: 20vw;
+  height: 15vh;
 }
 
  .card-top-row {
@@ -643,8 +672,8 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 
 .hunted {
   background-image: url(img/crosshair.PNG);
-  height: 1.6vmax;
-  width: 1.6vmax;
+  height: 1.6vmin;
+  width: 1.6vmin;
 }
 
 .poison {
@@ -652,9 +681,9 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 	transform: rotate(45deg);
   background-color: green;
   color: white;
-  height: 2vmax;
-  width: 2vmax;
-  line-height: 2vmax;
+  height: 3vmin;
+  width: 3vmin;
+  line-height: 3vmin;
   display: inline-block;
   text-align: center;
 }
