--- a/style.css
+++ b/style.css
@@ -789,15 +789,15 @@ button:hover {
 }
 
 .map-square {
-  height: 20vh;
+  height: 15vh;
   width: 15vw;
   background-color: green;
   margin: 2vmax;
   text-align: center;
-  line-height: 20vh;
+  line-height: 15vh;
 }
 
-.hidden-square {
+.hidden {
   visibility: hidden;
 }
 
@@ -807,3 +807,15 @@ button:hover {
   flex-wrap: wrap;
   height: 80vh;
 }
+
+.clickable-square:hover {
+  background-color: yellow;
+  cursor: pointer;
+  box-shadow: 0 0 35px rgba(33,33,33); 
+
+}
+
+.here {
+  background-color: red;
+}
+
