--- a/style.css
+++ b/style.css
@@ -271,6 +271,9 @@
   font-size: 1.2vw;
   padding: 0.05vh 0.05vw;
   border-radius: 0.6vw;
+  margin-top: 1vmin;
+  margin-bottom: 1vmin;
+
 }
 
 .fake-move-div {
@@ -278,6 +281,8 @@
   padding: 0.05vh 0.05vw;
   border-radius: 0.6vw;
   height: 2vh;
+  margin-top: 1vmin;
+  margin-bottom: 1vmin;
 }
 
 .map-div {
@@ -286,8 +291,13 @@
 }
 
 .chosen {
-  background: rgba(255, 83, 83, 0.636);
-  border: 2px dashed silver;
+  background: rgba(255, 52, 52, 0.916);
+  border: 4px dashed rgb(255, 254, 253);
+}
+
+.energy-filled {
+  background: rgba(255, 52, 52, 0.916);
+  border: 1px dashed white;
 }
 
 .not-chosen {
