--- a/style.css
+++ b/style.css
@@ -840,10 +840,10 @@ button:hover {
 }
 
 .map-square {
-  height: 12vh;
-  width: 10vw;
+  height: 14vmin;
+  width: 14vmin;
   border: 1px solid green;
-  background: linear-gradient(135deg, rgba(148, 255, 148, 0.85), rgba(22, 177, 19, 0.85));
+  background: linear-gradient(215deg, rgba(197, 255, 199, 0.916), rgba(187, 255, 187, 0.9));
   margin: 2vmin;
   text-align: center;
   display: flex;
@@ -855,38 +855,77 @@ button:hover {
   visibility: hidden;
 }
 
+.arrow-1 {
+  width:100px;
+  height:30px;
+  display: flex;
+}
+
+.arrow-1:before {
+  content: "";
+  background: currentColor;
+  width:15px;
+  clip-path: polygon(0 1vmin,calc(100% - 1.5vmin) 1vmin,calc(100% - 1.5vmin) 0,100% 50%,calc(100% - 1.5vmin) 100%,calc(100% - 1.5vmin) calc(100% - 1vmin),0 calc(100% - 1vmin));
+  animation: a1 1.5s infinite linear;
+}
+
+@keyframes a1 {
+  90%,100%{flex-grow: 1}
+}
+
 .map-div {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  padding-top: 15vh;
-  padding-bottom: 15vh;
+  padding-top: 12vh;
+  padding-bottom: 10vh;
   
-  height: 50vh;
+  height: 60vh;
 }
 
 .clickable-square:hover {
-  background-color:rgb(222, 222, 70);
+  background: linear-gradient(215deg, rgba(255, 236, 219, 0.916), rgba(229, 181, 151, 0.9));
   cursor: pointer;
-  box-shadow: 0 0 35px rgb(186, 172, 20); 
+  box-shadow: 0 0 35px rgba(229, 181, 151); 
   color: rgb(255, 254, 177);
 }
 
+.pentagram {
+	width: 12vmin;
+	height: 12vmin;
+	position: relative;
+	border: solid 4px #d64f01;;
+	border-radius: 50%;
+	transform-origin: center;
+	box-sizing: border-box;
+}
 
-
-.Healer {
-  background: linear-gradient( rgb(255, 197, 197, 0.85), rgb(197, 1, 1, 0.85));
-  color: rgb(255, 255, 255);
+.pentagram::before {
+	content: "";
+	width: 11.5vmin;
+	height: 11.5vmin;
+	position: absolute;
+	top: -0.7vmin;
+	left: -0.1vmin;
+	clip-path: polygon(50% 5%, 61% 40%, 98% 40%, 68% 62%, 79% 96%, 50% 75%, 21% 96%, 32% 62%, 2% 40%, 39% 40%);
+	background: #d64f01;
 }
 
 .Shop {
-  background: linear-gradient( rgba(255, 255, 186, 0.85), rgba(187, 187, 24, 0.85));
+  /*background: linear-gradient( rgba(218, 218, 218, 0.758), rgba(214, 214, 58, 0.85)); */
+  color: rgb(186, 186, 0);
+  font-size: 6em;
 }
 
 .Event {
-  background: linear-gradient( rgb(255, 186, 249, 0.85), rgb(128, 0, 163, 0.85));
-  color: rgb(255, 255, 255);
+  color: rgb(103, 0, 90);
+  font-size: 6em;
+}
+
+.Town {
   font-size: 3em;
+  color: rgb(50, 50, 50);
+  background: linear-gradient( rgba(173, 173, 173, 0.758), rgba(88, 88, 88, 0.85));
 }
 
 #shop-div .playable:hover {
@@ -901,7 +940,7 @@ button:hover {
 .here {
   background: linear-gradient( rgb(255, 218, 185, 0.85), rgba(243, 179, 133, 0.85),rgba(244, 181, 98, 0.85));  
   color: rgb(64, 9, 94);
-  font-size: 1.3em;
+  font-size: 2em;
   box-shadow: 0 0 50px rgb(109, 0, 0); 
 }
 
