--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@
   border: 2px dashed rgb(91, 0, 0);
   border-radius: 15px;
   text-align: center;
-  background-color: rgb(29, 29, 29);
+  background-color: rgb(69, 69, 69);
+  color: white;
   opacity: 0.9;
 }
 
@@ -842,8 +843,8 @@ button:hover {
 .map-square {
   height: 14vmin;
   width: 14vmin;
-  border: 1px solid green;
-  background: linear-gradient(215deg, rgba(197, 255, 199, 0.916), rgba(187, 255, 187, 0.9));
+  /*border: 1px solid green;
+  background: linear-gradient(215deg, rgba(197, 255, 199, 0.916), rgba(187, 255, 187, 0.9)); */
   margin: 2vmin;
   text-align: center;
   display: flex;
@@ -884,17 +885,28 @@ button:hover {
 }
 
 .clickable-square:hover {
-  background: linear-gradient(215deg, rgba(255, 236, 219, 0.916), rgba(229, 181, 151, 0.9));
   cursor: pointer;
-  box-shadow: 0 0 35px rgba(229, 181, 151); 
-  color: rgb(255, 254, 177);
+  color: rgb(255, 225, 0);
+  /*background: linear-gradient(215deg, rgba(255, 236, 219, 0.716), rgba(229, 181, 151, 0.7));*/
 }
+
+.clickable-square:hover .monster-hp {
+  border-image: radial-gradient(rgb(255, 225, 0) 69%,#0000 70%) 84.5% fill/100%;
+}
+
+.clickable-square:hover .pentagram {
+  border: solid 4px rgb(255, 225, 0);
+}
+
+.clickable-square:hover .pentagram::before {
+  background: rgb(255, 225, 0);
+ }
 
 .pentagram {
 	width: 12vmin;
 	height: 12vmin;
 	position: relative;
-	border: solid 4px #d64f01;;
+	border: solid 4px #d64f01;
 	border-radius: 50%;
 	transform-origin: center;
 	box-sizing: border-box;
@@ -913,7 +925,7 @@ button:hover {
 
 .Shop {
   /*background: linear-gradient( rgba(218, 218, 218, 0.758), rgba(214, 214, 58, 0.85)); */
-  color: rgb(186, 186, 0);
+  color: rgb(88, 88, 0);
   font-size: 6em;
 }
 
