--- a/style.css
+++ b/style.css
@@ -111,10 +111,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 4.5vh;
-  width: 4.5vw;
+  height: 7vh;
+  width: 7vw;
   position: relative;
-  font-size: 2.3vmin;
+  font-size: 2.5vmin;
 }
 
 .town-div {
@@ -281,9 +281,8 @@
   border: 1px dashed;
   padding: 0.05vh 0.05vw;
   border-radius: 0.6vw;
-  height: 2vh;
-  margin-top: 1vmin;
-  margin-bottom: 1vmin;
+  height: 3vh;
+  margin: 1.5vmin;
 }
 
 .map-div {
