--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@
 #status-text-div {
   color: silver;
   text-align: center;
+  display: flex row;
   
 }
 
@@ -872,6 +873,25 @@ button:hover {
 @keyframes a1 {
   90%,100%{flex-grow: 1}
 }
+
+.upgrade-animation {
+  animation: upgrade 3s linear 1 alternate;
+}
+
+@keyframes upgrade {
+
+  100% {
+    height: 20vh;
+    width: 30vw;
+    background-color: yellow;
+  }
+}
+
+.monster-xp {
+  font-size: 2em;
+  color: white;
+}
+
 
 .map-div {
   display: flex;
