--- a/style.css
+++ b/style.css
@@ -925,7 +925,7 @@ button:hover {
 	width: 12vmin;
 	height: 12vmin;
 	position: relative;
-	border: solid 4px #d64f01;
+	border: solid 4px #c60505;
 	border-radius: 50%;
 	transform-origin: center;
 	box-sizing: border-box;
@@ -939,7 +939,7 @@ button:hover {
 	top: -0.7vmin;
 	left: -0.1vmin;
 	clip-path: polygon(50% 5%, 61% 40%, 98% 40%, 68% 62%, 79% 96%, 50% 75%, 21% 96%, 32% 62%, 2% 40%, 39% 40%);
-	background: #d64f01;
+	background: #db1010;
 }
 
 .Shop {
@@ -956,7 +956,7 @@ button:hover {
 .Town {
   font-size: 3em;
   color: rgb(50, 50, 50);
-  background: linear-gradient( rgba(173, 173, 173, 0.758), rgba(88, 88, 88, 0.85));
+  background: linear-gradient(90deg, rgba(255, 236, 219, 0.89), rgba(0, 0, 0, 0.85));
 }
 
 #shop-div .playable:hover {
