--- a/style.css
+++ b/style.css
@@ -270,8 +270,8 @@
 
 .move {
   border: 1px dashed;
-  font-size: 1.2vw;
-  padding: 0.05vh 0.05vw;
+  font-size: 2.5vmin;
+  
   border-radius: 0.6vw;
   margin-top: 1vmin;
   margin-bottom: 1vmin;
@@ -685,11 +685,11 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 }
 
 .energy-cost, .hand-card-cost {
-  width: 1.8vw;
-  height: 1.8vw;
+  width: 2.5vmin;
+  height: 2.5vmin;
   text-align: center;
   border-radius: 50%;
-  font-size: 1.2em;
+  font-size: 0.9em;
   background-color: rgb(101, 14, 145);
   font-weight: bold;
   color: white;
