enemy attack animations
had to change playOpponentMove to pass stateObjs from opponent monster move to opponent monster move - currently only takes max of 3 enemies

--- a/style.css
+++ b/style.css
@@ -45,8 +45,18 @@
   100% { transform: translateX(0); }
 }
 
+@keyframes energyGain {
+  0% { font-size: 3vmin;}
+  50% { font-size: 4.1vmin;}
+  100% { font-size: 3vmin;}
+}
+
+.energy-gain {
+  animation: energyGain 0.2s forwards ;
+}
+
 .player-windup {
-  animation: playerWindup 0.3s forwards ;
+  animation: playerWindup 0.2s forwards ;
 }
 
 .opponent-windup {
@@ -68,7 +78,7 @@
 }
 
 .opponent-impact {
-  animation: opponentImpact 0.2s forwards ;
+  animation: opponentImpact 0.15s forwards ;
 }
 
 .player-impact {
@@ -377,17 +387,9 @@
   animation: fadeIn 1s;
 }
 
+
 .fade-out {
   animation: fadeOut 2s forwards;
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
 }
 
 .monster-hp {
@@ -485,7 +487,7 @@
 }
 
 #playerStats h4, #opponents h4 {
-  font-size: 1.3vw;
+  font-size: 3vmin;
 }
 
 .avatar {
@@ -583,6 +585,15 @@
   }
 }
 
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 
 .pile {
   width: 3vw;
@@ -629,8 +640,6 @@
   justify-content: center;
 }
 
-
-
 .card-pile-card {
   border: 1px solid black;
   background: linear-gradient(90deg, rgb(255, 238, 208),rgb(230, 171, 94), rgb(255, 200, 127), rgb(243, 133, 23));
@@ -642,15 +651,6 @@
   justify-content: center;
   overflow: wrap;
 }
-
-
-
-/*
-.playable { 
-  box-shadow: 0 0 2px rgba(33,33,33); 
-  justify-content: center;
-}
-*/
 
 .card.playable:hover {
   cursor: pointer;
@@ -693,7 +693,6 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
   font-size: 3vmin;
 }
 
-
 .card-pile-card h3 {
   font-size: 2.2vmin;
 }
@@ -708,10 +707,8 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
   justify-content: center;
 }
 
-
-
 .monster-energy {
-  font-size: 3vw;
+  font-size: 4vmin;
   background-color: rgb(101, 14, 145);
   color: white;
   border-radius: 10px;
@@ -721,7 +718,7 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 }
 
 .player-energy {
-  font-size: 3vw;
+  font-size: 4vmin;
   background-color: rgb(8, 61, 0);
   color: white;
   border-radius: 10px;
@@ -784,9 +781,6 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
   flex-direction: row;
   justify-content: left;
 }
-
-
-
 
 .skip-button{
   margin: 2vmax;
@@ -976,7 +970,6 @@ button:hover {
   font-size: 1.1em;
   color: white;
 }
-
 
 .map-div {
   display: flex;
