--- a/style.css
+++ b/style.css
@@ -331,7 +331,12 @@
   border-radius: 0.6vw;
   margin-top: 1vmin;
   margin-bottom: 1vmin;
+}
 
+.power {
+  font-size: 2vmin;
+  border: 1px dashed blue;
+  background-color: rgb(0, 48, 63);
 }
 
 .fake-move-div {
@@ -678,7 +683,7 @@
 /* https://codersblock.com/blog/creating-glow-effects-with-css/ 
 https://blog.logrocket.com/css-style-button-accessibility/*/
 
-.move h3, .move p, .card h3, .card p, .pile p, .card-pile-card h3, #playerStats h4 {
+.move h3, .move p, .card h3, .card p, .pile p, .card-pile-card h3, #playerStats h4, .power h3, .power p {
   margin-block-start: 0.01em;
   margin-block-end: 0.01em;
   margin-left: 0.1em;
