--- a/style.css
+++ b/style.css
@@ -60,29 +60,29 @@
 }
 
 .opponent-windup {
-  animation: 0.2s opponentWindup forwards ;
+  animation: opponentWindup 0.2s forwards ;
 }
 
 @keyframes opponentImpact {
   0% { transform: translateX(0); }
-  25% { transform: translateX(60px); }
-
+  50% { transform: translateX(0); }
+  75% { transform: translateX(30px); }
   100% { transform: translateX(0); }
 }
 
 @keyframes playerImpact {
   0% { transform: translateX(0); }
-  25% { transform: translateX(60px); }
-
+  50% { transform: translateX(0); }
+  75% { transform: translateX(-30px); }
   100% { transform: translateX(0); }
 }
 
 .opponent-impact {
-  animation: 0.1s opponentImpact 0.1s forwards ;
+  animation: opponentImpact 0.1s forwards ;
 }
 
 .player-impact {
-  animation: 0.1s playerImpact 0.1s forwards ;
+  animation: playerImpact 0.1s forwards ;
 }
 
 
