--- a/style.css
+++ b/style.css
@@ -419,9 +419,9 @@
 }
 
 .move {
-  border: 1px dashed;
-  font-size: 2.5vmin;
-  
+  font-size: 2.3vmin;
+  border: 1px solid rgba(191, 191, 191, 0.632);
+  color: rgba(191, 191, 191, 0.632);
   border-radius: 0.6vw;
   margin-top: 1vmin;
   margin-bottom: 1vmin;
@@ -434,7 +434,7 @@
 }
 
 .fake-move-div {
-  border: 1px dashed;
+  border: 1px solid;
   padding: 0.05vh 0.05vw;
   border-radius: 0.6vw;
   height: 3vh;
@@ -449,15 +449,20 @@
 .chosen {
   background: rgba(255, 52, 52, 0.916);
   border: 4px dashed rgb(255, 254, 253);
+  color: white;
+  font-size: 2.7vmin;
 }
 
 .energy-filled {
   background: rgba(255, 52, 52, 0.916);
-  border: 1px dashed white;
+  border: 1px solid white;
 }
 
-.not-chosen {
-  background: rgba(253, 99, 99, 0.312);
+#opponents .not-chosen {
+  background: rgba(255, 52, 52, 0.773);
+  color: rgba(176, 176, 176, 0.702);
+  font-size: 1.8vmin;
+  border: 1px solid white;
 }
 
 
