--- a/style.css
+++ b/style.css
@@ -542,6 +542,20 @@
     border: 1px dashed white;
   }
 
+  .monster-block-unwavering {
+    border-radius: 50% 50% 50% 50% / 12% 12% 30% 30%;
+    background-color: blue;
+    color: white;
+    width: 20%;
+    min-width: 0;
+    text-align: center;
+    font-size: 2vw;
+    width: 3vmax;
+    height: 3vmax;
+    flex-shrink: 1;
+    border: 2px solid white;
+  }
+
 
 .monster-button {
   margin-left: 0.5vw;
