--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
 }
 
 .player-windup {
-  animation: playerWindup 0.2s forwards ;
+  animation: playerWindup 0.4s forwards ;
 }
 
 .opponent-windup {
@@ -65,20 +65,20 @@
 
 @keyframes opponentImpact {
   0% { transform: translateX(0); }
-  50% { transform: translateX(0); }
-  75% { transform: translateX(30px); }
+  80% { transform: translateX(0); }
+  90% { transform: translateX(30px); }
   100% { transform: translateX(0); }
 }
 
 @keyframes playerImpact {
   0% { transform: translateX(0); }
-  50% { transform: translateX(0); }
-  75% { transform: translateX(-30px); }
+  85% { transform: translateX(0); }
+  92% { transform: translateX(-30px); }
   100% { transform: translateX(0); }
 }
 
 .opponent-impact {
-  animation: opponentImpact 0.2s forwards ;
+  animation: opponentImpact 0.45s forwards ;
 }
 
 .player-impact {
@@ -116,6 +116,54 @@
 
 .fire-choose {
   background-color: rgb(105, 60, 60);
+}
+
+#fireball {
+  background: rgb(214, 82, 0);
+  background: radial-gradient(circle, rgb(255, 47, 40) 30%, rgb(255, 108, 23) 75%, rgb(254, 143, 52));
+  border-radius: 50%;
+  height: 12vmin;
+  width: 12vmin;
+  position: absolute;
+  transform: translateX(-50vw);
+  visibility: hidden;
+}
+
+#hugefireball {
+  background: rgb(214, 82, 0);
+  background: radial-gradient(circle, rgb(255, 47, 40) 30%, rgb(255, 108, 23) 75%, rgb(254, 143, 52));
+  border-radius: 50%;
+  height: 20vmin;
+  width: 20vmin;
+  position: absolute;
+  transform: translateX(-35vw);
+  visibility: hidden;
+}
+
+.fireball-move {
+  animation: slide 0.4s ease-in;
+  /* animation-duration: 0.4s;
+  animation-name: slide;  */
+  /*animation: name duration timing-function delay iteration-count direction fill-mode;*/
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(-50vw);
+    visibility: hidden;
+  }
+  49% {
+    transform: translateX(0vw);
+    visibility: hidden;
+  }
+  50% {
+    transform: translateX(0vw);
+    visibility: visible;
+  }
+  100% {
+    transform: translateX(45vw);
+    visibility: visible;
+  }
 }
 
 .fire-choose:hover {
