better multi-enemy attack animation

--- a/style.css
+++ b/style.css
@@ -148,7 +148,14 @@
 }
 
 .fireball-move-2 {
-  animation: slide2 0.4s ease-in;
+  animation: slide2 0.36s ease-in;
+  /* animation-duration: 0.4s;
+  animation-name: slide;  */
+  /*animation: name duration timing-function delay iteration-count direction fill-mode;*/
+}
+
+.fireball-move-3 {
+  animation: slide3 0.36s ease-in;
   /* animation-duration: 0.4s;
   animation-name: slide;  */
   /*animation: name duration timing-function delay iteration-count direction fill-mode;*/
@@ -156,7 +163,7 @@
 
 @keyframes slide {
   0% {
-    transform: translateX(-50vw);
+    transform: translateX(-20vw);
     visibility: hidden;
   }
   49% {
@@ -175,7 +182,7 @@
 
 @keyframes slide2 {
   0% {
-    transform: translateX(-50vw);
+    transform: translateX(-20vw);
     visibility: hidden;
   }
   49% {
@@ -188,6 +195,25 @@
   }
   100% {
     transform: translateX(25vw);
+    visibility: visible;
+  }
+}
+
+@keyframes slide3 {
+  0% {
+    transform: translateX(-20vw);
+    visibility: hidden;
+  }
+  49% {
+    transform: translateX(0vw);
+    visibility: hidden;
+  }
+  50% {
+    transform: translateX(0vw);
+    visibility: visible;
+  }
+  100% {
+    transform: translateX(55vw);
     visibility: visible;
   }
 }
